// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedSystems component renders correctly when scoringweight equal & names equal 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-1 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-1"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-1
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-1 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-1"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-1
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with no systems 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-Name"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-Name"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal & names sorted opposite 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-1 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-1"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-1
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-2 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-2"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-2
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-Name"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-Name"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with systems 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-Name"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly without categories 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-Name"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders systems correctly without classifications 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <a
                class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
                data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                href="/en/s/path/"
                tabindex="0"
              >
                <div
                  class="OverviewCard-main"
                  data-testid="overview-card-main"
                >
                  <img
                    alt="system-Name"
                    class="OverviewCard-headerPicture css-10hd0hb-Media"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="OverviewCard-body"
                  >
                    <div
                      class="OverviewCard-brandLogo OverviewCard-negative"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
                      data-testid="overview-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="OverviewCard-text css-kl66ak"
                      data-testid="overview-card-body-description"
                    >
                      <div>
                        system-desc
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="OverviewCard-clickable css-1cyx9t4"
                  data-testid="overview-card-body-footer"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SystemCard renders correctly with related system 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
    data-testid="system-card-related-system-1"
  >
    <a
      class="MuiButtonBase-root OverviewCard-clickable MuiBox-root css-1j7ybbw-MuiButtonBase-root"
      data-gtm="{"id":"gtm-id"}"
      href="/en/related-system-path/"
      tabindex="0"
    >
      <div
        class="OverviewCard-main"
        data-testid="overview-card-main"
      >
        <img
          alt="related-ssytem-name"
          class="OverviewCard-headerPicture css-10hd0hb-Media"
          src="http://localhost:8000/image-main-source.jpg"
        />
        <div
          class="OverviewCard-body"
        >
          <div
            class="OverviewCard-brandLogo OverviewCard-negative"
          />
          <h5
            class="MuiTypography-root MuiTypography-h5 OverviewCard-title css-1lhxn1g-MuiTypography-root"
            data-testid="overview-card-body-title"
          >
            related-ssytem-name
          </h5>
          <div
            class="OverviewCard-text css-kl66ak"
            data-testid="overview-card-body-description"
          >
            <div>
              related-short-desc
            </div>
          </div>
        </div>
      </div>
      <div
        class="OverviewCard-clickable css-1cyx9t4"
        data-testid="overview-card-body-footer"
      >
        <button
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-9exsop-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          MC: sdp.system.readMore
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;
